--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-typing-animation": "^1.6.2",
+    "react-typist": "^2.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
