--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-modal": "^3.9.1",
+    "react-overlays": "^1.2.0",
+    "react-responsive-carousel": "^3.1.49",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
