--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "homepage": "https://xiaoping-li.github.io/xp-portfolio/",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.3.1",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-modal": "^3.9.1",
-    "react-overlays": "^1.2.0",
-    "react-responsive-carousel": "^3.1.49",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
